ci: fix workflow branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,4 +2,4 @@ on: [push]
 
 jobs:
   call-workflow:
-    uses: itera-network/itera.one/.github/workflows/main.yml@v1
+    uses: itera-network/itera.one/.github/workflows/main.yml@master
